--- a/style.css
+++ b/style.css
@@ -15,7 +15,8 @@
     align-items: center;
     flex-direction: column;
     overflow: hidden;
-    background: linear-gradient(to bottom, #023463, #4df3ff);
+    background: linear-gradient(to right, #9dd0ff, #4df3ff);
+    transition: all 1s;
 }
 .heading{
     text-transform: capitalize;
@@ -46,6 +47,7 @@
     color: #010d18;
     text-transform: capitalize;
     outline: none;
+    transition: all 1s;
 }
 #input:focus{
     border: 3px solid #023463;
